# lapo_bisognin_dla

./: README.md  pyproject.toml
DLA-Lab1/configs/: config.yaml
DLA-Lab1/configs/dataset/: GTSRB.yaml
DLA-Lab1/configs/experiments/: experiment_1_1.yaml  experiment_3_2.yaml
DLA-Lab1/configs/loss/: multi_margin.yaml
DLA-Lab1/configs/model/: convnext.yaml  inception.yaml  mobilenet_v2.yaml  mobilenet_v3.yaml  resnet101.yaml  resnet18.yaml  resnet50.yaml  vgg19.yaml
DLA-Lab1/configs/opt/: SGD.yaml  adam.yaml  adamw.yaml  rmsprop.yaml
DLA-Lab1/configs/train/: default.yaml
DLA-Lab1/data/: .gitignore
DLA-Lab1/src/: data_setup.py  engine.py  exercise_1_1.py  exercise_1_2.py  exercise_1_3.py  exercise_3_2.py  model_builder.py  utils.py
DLA-Lab2/configs/: config.yaml
DLA-Lab2/src/: app.py  data_setup.py  engine.py  exercise_1.py  exercise_2.py  exercise_3_3.py  model_builder.py  utils.py
DLA-Lab3/configs/: config.yaml
DLA-Lab3/scripts/: eval_checkpoints.py  run_experiments.py
DLA-Lab3/src/: engine.py  exercise_1.py  exercise_2.py  exercise_3.py  model_builder.py  utils.py
