[project]
name = "lapo-bisognin-dla"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "gradio>=6.19.0",
    "gymnasium[box2d]>=1.3.0",
    "hydra-core>=1.3.4",
    "ipython>=9.14.1",
    "jupyter>=1.1.1",
    "jupyterlab>=4.6.0",
    "matplotlib>=3.11.0",
    "moviepy>=2.2.1",
    "pandas>=3.0.3",
    "pygame>=2.6.1",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "stable-baselines3>=2.9.0",
    "swig>=4.4.1",
    "tensorboard>=2.20.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
    "transformers>=5.13.0",
    "wandb>=0.27.2",
]
